--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@thbx/tsconfig",
   "version": "1.0.0",
   "main": "tsconfig.json",
+  "files": ["tsconfig.json"],
   "license": "MIT",
   "publishConfig": {
     "access": "public"
